--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "date-fns": "^1.29.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-gravatar": "^2.6.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4",
+    "react-scripts": "2.0.5",
     "redux": "^4.0.1",
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0"
