--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "axios": "^0.18.0",
     "date-fns": "^1.29.0",
-    "i": "^0.3.6",
     "npm": "^6.4.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -17,9 +16,11 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
     "react-spinkit": "^3.0.0",
+    "react-stripe-elements": "^2.0.1",
     "redux": "^4.0.1",
     "redux-form": "^7.4.2",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
