--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "axios": "^0.18.0",
     "date-fns": "^1.29.0",
+    "node-sass": "^4.9.4",
     "npm": "^6.4.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
