--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-gravatar": "^2.6.3",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.0.5",
+    "react-scripts": "2.1.1",
     "react-spinkit": "^3.0.0",
     "react-stripe-elements": "^2.0.1",
     "redux": "^4.0.1",
