--- a/package.json
+++ b/package.json
@@ -10,18 +10,13 @@
     "date-fns": "^1.29.0",
     "node-sass": "^4.10.0",
     "npm": "^6.4.1",
-    "react": "^16.6.1",
-    "react-dom": "^16.6.1",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-gravatar": "^2.6.3",
-    "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-spinkit": "^3.0.0",
-    "react-stripe-elements": "^2.0.1",
-    "redux": "^4.0.1",
-    "redux-form": "^7.4.2",
-    "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "react-stripe-elements": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,8 +34,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint-config-prettier": "^3.1.0",
+    "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-prettier": "^3.0.0",
-    "prettier": "^1.15.1"
+    "prettier": "^1.15.2"
   }
 }
