--- a/package.json
+++ b/package.json
@@ -6,19 +6,21 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "apollo-boost": "^0.1.23",
     "axios": "^0.18.0",
     "date-fns": "^1.30.1",
     "formik": "^1.4.1",
+    "graphql": "^14.0.2",
     "node-sass": "^4.11.0",
     "npm": "^6.5.0",
     "react": "^16.7.0",
+    "react-apollo": "^2.3.3",
     "react-dom": "^16.7.0",
     "react-gravatar": "^2.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.2",
     "react-spinkit": "^3.0.0",
     "react-stripe-elements": "^2.0.1",
-    "unstated": "^2.1.1",
     "yup": "^0.26.6"
   },
   "scripts": {
