--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "graphql": "^14.0.2",
     "node-sass": "^4.11.0",
     "npm": "^6.5.0",
+    "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-apollo": "^2.3.3",
     "react-dom": "^16.7.0",
