--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "^2.1.2",
     "react-spinkit": "^3.0.0",
     "react-stripe-elements": "^2.0.1",
+    "styled-components": "^4.1.3",
     "yup": "^0.26.6"
   },
   "scripts": {
