set up theme and provider and the ui components

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.10.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-prettier": "^3.0.1",
     "prettier": "^1.15.3"
