--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apollo-boost": "^0.1.23",
     "axios": "^0.18.0",
     "date-fns": "^1.30.1",
+    "env-cmd": "^8.0.2",
     "formik": "^1.4.1",
     "graphql": "^14.0.2",
     "npm": "^6.5.0",
