--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
 REACT_APP_STRIPE_PUB_KEY=tok_visa
-REACT_APP_API_URL=https://localhost:3001/graphql
+REACT_APP_API_URL=http://localhost:3001/graphql
