--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "apollo-boost": "^0.1.23",
     "axios": "^0.18.0",
-    "date-fns": "^1.30.1",
+    "dayjs": "^1.7.8",
     "env-cmd": "^8.0.2",
     "formik": "^1.4.1",
     "graphql": "^14.0.2",
@@ -19,7 +19,7 @@
     "react-dom": "^16.7.0",
     "react-gravatar": "^2.6.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.2",
+    "react-scripts": "^2.1.3",
     "react-spinkit": "^3.0.0",
     "react-stripe-elements": "^2.0.1",
     "styled-components": "^4.1.3",
