--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "env-cmd": "^8.0.2",
     "formik": "^1.4.1",
     "graphql": "^14.0.2",
+    "lodash": "^4.17.11",
     "npm": "^6.5.0",
     "query-string": "^6.2.0",
     "react": "^16.7.0",
