--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-dom": "^16.7.0",
     "react-gravatar": "^2.6.3",
     "react-loader-spinner": "^2.3.0",
+    "react-portal": "^4.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
+    "react-snap": "^1.23.0",
     "react-stripe-elements": "^2.0.1",
     "styled-components": "^4.1.3",
     "yup": "^0.26.6"
