--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphql": "^14.0.2",
     "lodash": "^4.17.11",
     "npm": "^6.5.0",
+    "polished": "^2.3.3",
     "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-apollo": "^2.3.3",
@@ -26,6 +27,7 @@
     "react-snap": "^1.23.0",
     "react-stripe-elements": "^2.0.1",
     "styled-components": "^4.1.3",
+    "styled-sanitize": "^1.1.1",
     "yup": "^0.26.6"
   },
   "scripts": {
