--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "react-portal": "^4.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
-    "react-snap": "^1.23.0",
     "react-stripe-elements": "^2.0.1",
     "styled-components": "^4.1.3",
     "styled-sanitize": "^1.1.1",
@@ -31,6 +30,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "react-snap",
     "build:staging": "env-cmd .env.staging npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -47,6 +47,7 @@
   "devDependencies": {
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "^1.15.3"
+    "prettier": "^1.15.3",
+    "react-snap": "^1.23.0"
   }
 }
