--- a/package.json
+++ b/package.json
@@ -3,29 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.12",
-    "@fortawesome/free-solid-svg-icons": "^5.6.3",
-    "@fortawesome/react-fontawesome": "^0.1.3",
-    "apollo-boost": "^0.1.23",
-    "dayjs": "^1.7.8",
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "apollo-boost": "^0.1.28",
+    "dayjs": "^1.8.6",
     "env-cmd": "^8.0.2",
-    "formik": "^1.4.1",
-    "graphql": "^14.0.2",
+    "formik": "^1.5.1",
+    "graphql": "^14.1.1",
     "lodash": "^4.17.11",
-    "polished": "^2.3.3",
+    "polished": "^3.0.0",
     "query-string": "^6.2.0",
-    "react": "^16.8.0-alpha.1",
-    "react-apollo": "^2.3.3",
-    "react-dom": "^16.8.0-alpha.1",
+    "react": "^16.8.2",
+    "react-apollo": "^2.4.1",
+    "react-dom": "^16.8.2",
     "react-gravatar": "^2.6.3",
     "react-loader-spinner": "^2.3.0",
     "react-portal": "^4.2.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.3",
-    "react-stripe-elements": "^2.0.1",
+    "react-scripts": "^2.1.5",
+    "react-stripe-elements": "^2.0.3",
     "styled-components": "^4.1.3",
     "styled-sanitize": "^1.1.1",
-    "yup": "^0.26.6"
+    "yup": "^0.26.10"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,9 +44,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint-config-prettier": "^3.3.0",
+    "eslint-config-prettier": "^3.6.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "^1.15.3",
+    "prettier": "^1.16.4",
     "react-snap": "^1.23.0"
   }
 }
