--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "apollo-boost": "^0.1.28",
-    "dayjs": "^1.8.6",
+    "dayjs": "^1.8.8",
     "env-cmd": "^8.0.2",
     "formik": "^1.5.1",
     "graphql": "^14.1.1",
     "lodash": "^4.17.11",
+    "luxon": "^1.11.3",
     "polished": "^3.0.0",
     "query-string": "^6.2.0",
-    "react": "^16.8.2",
-    "react-apollo": "^2.4.1",
-    "react-dom": "^16.8.2",
+    "react": "^16.8.3",
+    "react-apollo": "^2.5.0",
+    "react-dom": "^16.8.3",
     "react-gravatar": "^2.6.3",
     "react-loader-spinner": "^2.3.0",
     "react-portal": "^4.2.0",
@@ -30,9 +31,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:production": "env-cmd .env.production npm run build",
+    "deploy:production": "npm run build:production && firebase use production && firebase deploy",
     "build:staging": "env-cmd .env.staging npm run build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy:staging": "npm run build:staging && firebase use staging && firebase deploy",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
