--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "apollo-boost": "^0.3.1",
-    "dayjs": "^1.8.8",
     "env-cmd": "^8.0.2",
     "formik": "^1.5.1",
     "graphql": "^14.1.1",
@@ -24,6 +23,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
     "react-stripe-elements": "^2.0.3",
+    "react-to-print": "^2.0.0-alpha.7",
     "styled-components": "^4.1.3",
     "styled-sanitize": "^1.1.1",
     "yup": "^0.26.10"
